--- a/src/main.css
+++ b/src/main.css
@@ -329,8 +329,8 @@ body {
   padding: 1%;
   padding-right: 2%;
   padding-left: 2%;
-  position: absolute;
-  left: 80%;
+  /* position: absolute; */
+  left: 87%;
   bottom: 90%;
   font-family: "Montserrat", sans-serif;
 }
@@ -349,8 +349,8 @@ body {
   outline: none;
   /* opacity: 0.7; */
   padding: 1%;
-  position: absolute;
-  right: 89%;
+  /* position: absolute; */
+  right: 94%;
   bottom: 90%;
 }
 
@@ -602,7 +602,7 @@ body {
   border-radius: 1.5vh;
   box-shadow: 0px 10px 30px 5px rgba(0, 0, 0.15);
   position: absolute;
-  left: 50%;
+  left: 47%;
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 10px;
@@ -980,6 +980,20 @@ tfoot:before {
   transition: all ease 0.3s;
 }
 
+.headerFlexbox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 4%;
+}
+
+#titleHeader {
+  font-size: 38px;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+}
+
 /* @media screen and (min-width: 635px) {
   .tholder {
     margin-top: 2.5%;
@@ -1000,19 +1014,19 @@ tfoot:before {
 
 @media screen and (min-width: 1000px) {
   body {
-    margin-top: 13%;
+    margin-top: 8%;
   }
 }
 
 @media screen and (min-width: 1080px) {
   body {
-    margin-top: 12%;
+    margin-top: 7%;
   }
 }
 
 @media screen and (min-width: 1400px) {
   body {
-    margin-top: 11%;
+    margin-top: 6%;
   }
 }
 
