--- a/src/appSelector.css
+++ b/src/appSelector.css
@@ -9,7 +9,7 @@ body {
     Arial, sans-serif;
   margin: auto;
   max-width: 38rem;
-  padding: 2rem;
+  padding-bottom: 14rem;
   /* background-color: #282d34; */
   background-image: linear-gradient(to bottom right, #053f45, #0b817b);
   overflow: hidden;
@@ -37,8 +37,9 @@ body {
 }
 
 #takeToLockerButton:hover {
-  border: 2px solid rgb(1 255 242);
   transition: all ease-in-out 0.2s;
+  transform: translateY(-2px);
+  cursor: pointer;
 }
 
 #takeToPMButton {
@@ -46,8 +47,9 @@ body {
 }
 
 #takeToPMButton:hover {
-  border: 2px solid rgb(1 255 242);
   transition: all ease-in-out 0.2s;
+  transform: translateY(-2px);
+  cursor: pointer;
 }
 
 .redirectAppButtons {
@@ -73,7 +75,7 @@ body {
 
 #backToLoginLinkContainer {
   text-align: center;
-  margin-top: 7%;
+  margin-top: 9%;
 }
 
 #backToLoginLink {
@@ -126,6 +128,6 @@ body {
 #nameHeader {
   color: white;
   font-family: "Montserrat", sans-serif;
-  margin-left: 32%;
+  margin-left: 34%;
   margin-top: 0;
 }
