--- a/src/main.css
+++ b/src/main.css
@@ -590,9 +590,10 @@ body {
 #closeSettings {
   color: #00fff3;
   font-size: 30px;
-  text-align: center;
-  float: right;
   cursor: pointer;
+  top: 7px;
+  position: absolute;
+  right: 7px;
 }
 
 #closeSettings:hover {
@@ -602,14 +603,30 @@ body {
 
 .settingsScreen {
   display: none;
-  background-color: #383636;
-  border-radius: 1.5vh;
-  box-shadow: 0px 10px 30px 5px rgba(0, 0, 0.15);
   position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  padding: 10px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  background-color: #2a2828;
+  justify-content: center;
+}
+
+.mainSettings {
+  padding-top: 3%;
+}
+
+.accountSettingsHeader {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  font-size: 22px;
+}
+
+.accountSettings {
+  display: flex;
+  flex-direction: column;
 }
 
 #fromMainToLogin {
