--- a/src/main.css
+++ b/src/main.css
@@ -129,6 +129,18 @@ body {
   }
 }
 
+@keyframes pushOutMPTab {
+  to {
+    width: 37%;
+  }
+}
+
+@keyframes pullInMPTab {
+  to {
+    width: 0%;
+  }
+}
+
 .queryLine {
   /* position: absolute; */
   background-color: #434446;
@@ -596,13 +608,14 @@ body {
   align-self: center;
   justify-self: center;
   background: #1b1b1b;
-  width: 25%;
+  width: 0%;
   height: -webkit-fill-available;
-  padding: 3%;
+  padding: 0%;
   justify-content: space-evenly;
 }
 
 .changeMasterPasswordHeader {
+  display: none;
   color: white;
   margin-top: 0;
   text-align: center;
@@ -612,6 +625,9 @@ body {
 .changeMPInput {
   border: none;
   color: white;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  font-size: 15px;
   padding: 5%;
   border-top: 1px solid #746e6e;
   background-color: #30343c;
@@ -628,23 +644,31 @@ body {
   border-bottom-left-radius: 1vh;
 }
 
+.showNewMPPasswordsButton {
+  border: none;
+  background: #30343c;
+  opacity: 0.8;
+  border-radius: 0.5vh;
+  padding: 3%;
+  margin-bottom: 1%;
+}
+
 .showPasswordsText {
   color: white;
   font-family: "Open Sans", sans-serif;
-  align-self: flex-start;
   cursor: pointer;
+  margin: 0;
+  font-weight: 600;
 }
 
 .changeMPFooter {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  display: none;
+  flex-direction: column;
 }
 
 .confirmMasterPasswordChange {
-  align-self: center;
-  padding: 1.5% 6% 1.5% 6%;
-  border-radius: 8vh;
+  padding: 3%;
+  border-radius: 0.5vh;
   border: none;
   color: white;
   font-family: "Open Sans", sans-serif;
@@ -655,8 +679,22 @@ body {
   opacity: 0.8;
 }
 
+.closeChangeMasterPasswordWindow {
+  display: none;
+  padding: 3%;
+  border-radius: 0.5vh;
+  border: none;
+  color: white;
+  font-family: "Open Sans", sans-serif;
+  background-color: #30343c;
+  font-weight: 600;
+  letter-spacing: 1px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
 .changeMPInputsContainer {
-  display: flex;
+  display: none;
   flex-direction: column;
 }
 
@@ -734,7 +772,8 @@ body {
   float: left;
   font-size: 16px;
   padding-left: 1%;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
 }
 
 .upgradeToPremium {
