--- a/src/main.css
+++ b/src/main.css
@@ -859,7 +859,8 @@ body {
 .newMasterPasswordField {
   background-color: transparent;
   outline: none;
-  border: 2px solid teal;
+  border: none;
+  border-bottom: 2px solid teal;
   margin-top: 8.5%;
   color: white;
   font-size: 1rem;
@@ -901,7 +902,7 @@ body {
   background-color: transparent;
   outline: none;
   border: none;
-  border: 2px solid teal;
+  border-bottom: 2px solid teal;
   margin-top: 3%;
   color: white;
   font-size: 1rem;
@@ -943,12 +944,6 @@ body {
   font-weight: bold;
   position: absolute;
   left: 5.5%;
-}
-
-#passwordStrengthBar {
-}
-
-#reenterPasswordStrengthBar {
 }
 
 meter {
