--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -52,12 +52,15 @@ body {
   outline: none;
   border: none;
   padding: 3.7%;
-  margin-top: 8%;
+  margin-top: 3%;
   color: white;
   padding-right: 15%;
   padding-left: 5%;
   font-size: 1rem;
   font-weight: bold;
+  box-shadow: 0px 10px 30px 5px rgb(0 0 0);
+  transition: all ease-in-out 0.2s;
+  font-family: "Montserrat", sans-serif;
 }
 
 #emailInput:focus {
@@ -76,12 +79,15 @@ body {
   outline: none;
   border: none;
   padding: 3.7%;
-  margin-top: 5%;
+  margin-top: 3%;
   color: white;
   padding-right: 15%;
   padding-left: 5%;
   font-size: 1rem;
   font-weight: bold;
+  box-shadow: 0px 10px 30px 5px rgb(0 0 0);
+  transition: all ease-in-out 0.2s;
+  font-family: "Montserrat", sans-serif;
 }
 
 .signUpContainer {
