--- a/src/components/MfaBox.module.css
+++ b/src/components/MfaBox.module.css
@@ -3,10 +3,14 @@
 .mainMfaBox {
   display: flex;
   flex-direction: column;
-  background-color: #282d34;
+  background-color: #151922;
   box-shadow: 0 14px 20px rgb(0 0 0 / 80%);
   border-radius: 1vh;
   align-items: center;
+  width: 50%;
+  position: absolute;
+  top: 30%;
+  left: 25%;
 }
 
 input::-webkit-outer-spin-button,
@@ -50,10 +54,12 @@ input::-webkit-inner-spin-button {
 #mfaHeader {
   font-family: "Montserrat", sans-serif;
   color: white;
+  margin-bottom: 0;
+  margin-top: 6%;
 }
 
 .confirmCode {
-  margin-top: 3%;
+  margin-top: 4%;
   cursor: pointer;
   background-color: grey;
   font-family: "Montserrat", sans-serif;
@@ -67,7 +73,7 @@ input::-webkit-inner-spin-button {
 }
 
 #logout {
-  margin-top: 3%;
+  margin-top: 6%;
   font-family: "Montserrat", sans-serif;
   color: white;
   font-weight: 800;
