--- a/src/pages/Pm/Pm.module.css
+++ b/src/pages/Pm/Pm.module.css
@@ -18,6 +18,7 @@ body {
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
+  display: none;
 }
 
 meter[value="1"]::-webkit-meter-optimum-value {
@@ -171,7 +172,7 @@ body {
   font-weight: 700;
   font-size: 1.65rem;
   text-align: center;
-  margin-top: 9%;
+  margin-top: 8%;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -198,12 +199,12 @@ body {
 
 .newMasterPasswordField:focus {
   width: 51%;
-  transition: all ease-in-out 0.2s;
+  transition: all ease-in-out 0.1s;
 }
 
 .newMasterPasswordField:focus ~ .passwordStrengthBar {
   width: 67%;
-  transition: all ease-in-out 0.2s;
+  transition: all ease-in-out 0.1s;
 }
 
 .renterMP {
@@ -235,22 +236,24 @@ body {
 }
 
 .confirmMasterPasswordButton {
-  width: 71%;
+  width: 54%;
   padding: 3%;
   color: white;
-  font-size: 17px;
+  font-size: 16px;
   cursor: pointer;
   text-align: center;
   background-color: #13817c;
   border-radius: 10vh;
   opacity: 0.8;
-  margin-top: 14%;
+  margin-top: 6%;
   display: flex;
   border: none;
-  padding: 3%;
+  padding: 2%;
   align-self: center;
   flex-direction: row;
   justify-content: center;
+  font-weight: 900;
+  font-family: "Montserrat", sans-serif;
 }
 
 .confirmMasterPasswordButton:hover {
@@ -266,12 +269,46 @@ body {
   font-size: 17px;
   align-self: center;
   margin: 0;
-  margin-top: 4.5%;
+  margin-top: 28.5%;
 }
 
 .back:hover {
   opacity: 0.7;
-  margin-top: 5%;
+  margin-top: 28%;
+  transition: all ease-in-out 0.1s;
+}
+
+.backFromSignup {
+  color: #00ffd0;
+  text-decoration: none;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  font-size: 17px;
+  align-self: center;
+  margin: 0;
+  margin-top: 20.5%;
+}
+
+.backFromSignup:hover {
+  opacity: 0.7;
+  margin-top: 20%;
+  transition: all ease-in-out 0.1s;
+}
+
+.forgotPassword {
+  color: #00ffd0;
+  text-decoration: none;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  font-size: 17px;
+  align-self: center;
+  margin: 0;
+  margin-top: 16.5%;
+}
+
+.forgotPassword:hover {
+  opacity: 0.7;
+  margin-top: 17%;
   transition: all ease-in-out 0.1s;
 }
 
@@ -285,4 +322,134 @@ body {
   position: absolute;
   right: 37%;
   top: 60%;
+}
+
+.confirmBackupButton {
+  width: 56%;
+  padding: 3%;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  background-color: #13817c;
+  border-radius: 10vh;
+  opacity: 0.8;
+  margin-top: 5%;
+  display: flex;
+  border: none;
+  padding: 2%;
+  align-self: center;
+  flex-direction: row;
+  justify-content: center;
+  font-weight: 900;
+  font-family: "Montserrat", sans-serif;
+  transition: all ease-in-out 0.1s;
+}
+
+.confirmBackupButton:hover {
+  opacity: 1;
+  transition: ease-in-out 0.1s;
+}
+
+.backToLogin {
+  color: #00ffd0;
+  text-decoration: none;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  font-size: 21px;
+  align-self: center;
+  margin: 0;
+  margin-top: 24.5%;
+}
+
+.backToLogin:hover {
+  opacity: 0.7;
+  margin-top: 25%;
+  transition: all ease-in-out 0.1s;
+}
+
+.backupCodeField {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid teal;
+  margin-top: 8.5%;
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  padding: 3%;
+  height: 8%;
+  text-align: center;
+  align-self: center;
+  width: 40%;
+  font-size: 1.3rem;
+  margin-top: 11%;
+  transition: all ease-in-out 0.1s;
+}
+
+.backupCodeField:focus {
+  width: 51%;
+  transition: all ease-in-out 0.1s;
+}
+
+.accountRecoveryHeader {
+  color: white;
+  font-weight: 700;
+  font-size: 1.65rem;
+  text-align: center;
+  margin-top: 8%;
+  font-family: "Montserrat", sans-serif;
+}
+
+.mainBackupContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.backupCodesContainter {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 60px;
+  font-size: 1.4rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  letter-spacing: 2.4px;
+  color: #00a3a3;
+  margin-bottom: 6%;
+}
+
+.confirmSavedBackupCodesButton {
+  width: 100%;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  background-color: #13817c;
+  border-radius: 10vh;
+  opacity: 0.8;
+  margin-top: 2%;
+  border: none;
+  padding: 2%;
+  font-weight: 900;
+  font-family: "Montserrat", sans-serif;
+}
+
+.confirmSavedBackupCodesButton:hover {
+  opacity: 1;
+  transition: ease-in-out 0.1s;
+}
+
+#codeUsedMessage {
+  color: red;
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  margin: 0;
+}
+
+.inputArea {
+  display: flex;
+  width: 50%;
+  align-self: center;
 }
