--- a/src/pages/Pm/Settings.module.css
+++ b/src/pages/Pm/Settings.module.css
@@ -290,6 +290,9 @@
   font-family: "Open Sans", sans-serif;
   padding: 2%;
   cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #closeSettings {
@@ -307,5 +310,73 @@
 
 #closeSettings:hover {
   background-color: #504f4f;
+  transition: 0.2s;
+}
+
+/* Dropdown Button */
+.dropbtn {
+  border-radius: 8vh;
+  background-color: #1a1c20;
+  width: 200%;
+  display: flex;
+  border: 2px solid #363b45;
+  padding: 10%;
+  align-self: center;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  font-family: "Open Sans", sans-serif;
+  padding: 18% 70% 18% 70%;
+  white-space: pre;
+  display: flex;
+  align-self: center;
+  justify-self: center;
+  justify-content: center;
+}
+.dropbtn:hover {
+  background-color: #4f5562;
+  transition: 0.2s;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdownContent {
+  display: none;
+  position: absolute;
+  background-color: #1a1c20;
+  min-width: 106.5px;
+  box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
+  z-index: 1;
+  margin-top: 56%;
+  margin-right: 4%;
+}
+
+/* Links inside the dropdown */
+.dropdownContent a {
+  color: #0da7a0;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdownContent a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdownContent {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  border-radius: 0vh;
   transition: 0.2s;
 }
