--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -7,7 +7,7 @@
 body {
   background-color: #282d34;
   padding: 5%;
-  font-family: Brutal, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-style: 20px;
   font-weight: 400;
   line-height: 29px;
@@ -52,13 +52,13 @@ body {
   outline: none;
   border: none;
   padding: 3.7%;
-  margin-top: 3%;
+  margin-top: 5%;
   color: white;
   padding-right: 15%;
   padding-left: 5%;
   font-size: 1rem;
   font-weight: bold;
-  box-shadow: 0px 10px 30px 5px rgb(0 0 0);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   transition: all ease-in-out 0.2s;
   font-family: "Montserrat", sans-serif;
 }
@@ -79,13 +79,13 @@ body {
   outline: none;
   border: none;
   padding: 3.7%;
-  margin-top: 3%;
+  margin-top: 2%;
   color: white;
   padding-right: 15%;
   padding-left: 5%;
   font-size: 1rem;
   font-weight: bold;
-  box-shadow: 0px 10px 30px 5px rgb(0 0 0);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   transition: all ease-in-out 0.2s;
   font-family: "Montserrat", sans-serif;
 }
@@ -105,7 +105,7 @@ body {
   opacity: 0.8;
   border: none;
   font-family: "Montserrat", sans-serif;
-  box-shadow: rgb(0 0 0 / 50%) 0px 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   background-image: linear-gradient(to bottom right, #053f45, #0b817b);
 }
 
@@ -122,12 +122,13 @@ body {
 }
 
 #signUpHeader {
-  font-family: Brutal, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-style: 20px;
   font-weight: 400;
   color: white;
   text-align: center;
   margin-top: 9%;
+  margin-bottom: 12%;
 }
 
 #sendToLogin {
